# opengl-sandbox

./: .gitignore  README.md
OpenGLSandbox/: CMakeLists.txt
OpenGLSandbox/assets/shaders/: animated_render.frag  animated_render.vert  basic_render.frag  basic_render.vert  basic_triangle.frag  basic_triangle.vert  ribbontrail_render.frag
OpenGLSandbox/include/glad/: glad.h
OpenGLSandbox/src/: RibbonTrail.cpp  RibbonTrail.h  main.cpp
OpenGLSandbox/src/glad/: glad.c
